--- a/src/components/grid/style.scss
+++ b/src/components/grid/style.scss
@@ -2,11 +2,17 @@
 
 .row, .header {
   cursor: pointer;
+  font-family: helvetica;
+  display: inline-block;
+  padding: 0.25rem 0.5rem;
+  min-width: 20rem;
+
+  .fieldHeader {
+    font-weight: bold;
+  }
 
   .field {
-    display: inline-block;
-    padding: 0.25rem 0.5rem;
-    min-width: 20rem;
+  	font-weight: normal;
   }
 }
 
