--- a/src/components/grid/style.scss
+++ b/src/components/grid/style.scss
@@ -2,22 +2,22 @@
 
 .row, .header {
   cursor: pointer;
-  font-family: helvetica;
-  display: inline-block;
-  padding: 0.25rem 0.5rem;
-  min-width: 20rem;
 
   .fieldHeader {
     font-weight: bold;
+    font-size: 20px;
   }
 
   .field {
-  	font-weight: normal;
+  	font-family: helvetica;
+  	display: inline-block;
+  	padding: 0.25rem 0.5rem;
+  	min-width: 20rem;
   }
 }
 
 .row:hover {
-  background: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.3);
 }
 
 .footer {
@@ -29,5 +29,16 @@
 		display: inline-block;
 		padding: 2rem;
 		cursor: pointer;
+	}
+
+	.toHome {
+    	background-color: DodgerBlue;
+    	border: none;
+    	color: white;
+	    padding: 15px 32px;
+    	text-align: center;
+	    text-decoration: none;
+    	display: inline-block;
+	    font-size: 16px;
 	}
 }
