--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -1,3 +1,18 @@
 html {
-  background-color: white
+  width: 100%;
+  height: 100%;
+  background-color: white;
+
+  body {
+	width: 100%;
+	height: 100%;
+  }
+
+  #app {
+  	width: 100%;
+  	height: 100%;
+    display: flex;
+  	align-items: center;
+  	justify-content: center;
+  }
 }
