--- a/src/components/home/style.scss
+++ b/src/components/home/style.scss
@@ -11,8 +11,13 @@ html {
   #app {
   	width: 100%;
   	height: 100%;
+  }
+
+  .application-container, .home-container {
+    width: 100%;
+    height: 100%;
     display: flex;
-  	align-items: center;
-  	justify-content: center;
+    align-items: center;
+    justify-content: center;
   }
 }
